# nepali-wallets-python

./: .env.example  .gitignore  CONTRIBUTION.md  README.md  pyproject.toml
nepali_wallets/client/: __init__.py  _esewa.py  _khalti.py  _nchl.py  base.py
tests/: connectors.py  fixtures.py  test_esewa.html
tests/clients/: test_esewa.py  test_khalti.py
